<resources>
    <string name="app_name">Mobigur</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_about">About</string>

    <string name="splash_text">www.lethalskillzz.com</string>
    <string name="msg_refresh">Pull to refresh</string>

    <string name="error_no_internet">Couldn\'t connect. Please check your Internet connection!</string>


    <string name="image_desc">Image description</string>
    <string name="icon_desc">Icon description</string>


    <string name="nav_header_subtitle">Menu</string>
    <string name="navHeaderImageDescription">Nav header image description</string>

    <string name="navigation_drawer_open">Opening drawer</string>
    <string name="navigation_drawer_close">Closing drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>

    <string name="msg_loading">Loading&#8230;</string>

    <string name="nav_user">User</string>
    <string name="nav_top">Top</string>
    <string name="nav_hot">Hot</string>


    <string name="menu_filter">Filter</string>
    <string name="filter_viral">Viral</string>
    <string name="filter_top">Top</string>
    <string name="filter_time">Time</string>
    <string name="filter_rising">Rising</string>
    <string name="filter_day">Day</string>
    <string name="filter_week">Week</string>
    <string name="filter_month">Month</string>
    <string name="filter_year">Year</string>
    <string name="filter_all">All</string>
    <string name="filter_show_viral">Show Viral</string>


    <!-- Subtitle -->
    <string name="subtitle_hot_viral">Hot &#8226; Viral</string>
    <string name="subtitle_hot_top">Hot &#8226; Top</string>
    <string name="subtitle_hot_time">Hot &#8226; Time</string>


    <string name="subtitle_top_viral_day">Top &#8226; Viral &#8226; Day</string>
    <string name="subtitle_top_viral_week">Top &#8226; Viral &#8226; Week</string>
    <string name="subtitle_top_viral_month">Top &#8226; Viral &#8226; Month</string>
    <string name="subtitle_top_viral_year">Top &#8226; Viral &#8226; Year</string>
    <string name="subtitle_top_viral_all">Top &#8226; Viral &#8226; All</string>

    <string name="subtitle_top_top_day">Top &#8226; Top &#8226; Day</string>
    <string name="subtitle_top_top_week">Top &#8226; Top &#8226; Week</string>
    <string name="subtitle_top_top_month">Top &#8226; Top &#8226; Month</string>
    <string name="subtitle_top_top_year">Top &#8226; Top &#8226; Year</string>
    <string name="subtitle_top_top_all">Top &#8226; Top &#8226; All</string>

    <string name="subtitle_top_time_day">Top &#8226; Time &#8226; Day</string>
    <string name="subtitle_top_time_week">Top &#8226; Time &#8226; Week</string>
    <string name="subtitle_top_time_month">Top &#8226; Time &#8226; Month</string>
    <string name="subtitle_top_time_year">Top &#8226; Time &#8226; Year</string>
    <string name="subtitle_top_time_all">Top &#8226; Time &#8226; All</string>


    <string name="subtitle_user_viral">User &#8226; Viral</string>
    <string name="subtitle_user_top">User &#8226; Top</string>
    <string name="subtitle_user_time">User &#8226; Time</string>
    <string name="subtitle_user_rising">User &#8226; Rising</string>
    <string name="filter_sort">Sort</string>
    <string name="nav_grid">Grid</string>
    <string name="nav_staggered_grid">Staggered Grid</string>
    <string name="nav_list">List</string>
    <string name="nav_layout">Layout</string>
    <string name="nav_info">Info</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_copyright">© 2017 brahim Abdulkadir \r\n lethalskillzz@gmail.com</string>


</resources>
