<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlackBackground"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/details_padding"
            >

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:text="@string/msg_loading"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/details_title_size"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image_desc"
                    android:scaleType="fitXY"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/details_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/msg_loading"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/details_score_size"
                        android:textStyle="bold"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/text_padding">

                            <ImageView
                                android:layout_width="@dimen/details_image_icon_size"
                                android:layout_height="@dimen/details_image_icon_size"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/details_image_icon_margin"
                                android:contentDescription="@string/icon_desc"
                                android:src="@mipmap/up_arrow" />

                            <TextView
                                android:id="@+id/details_up_vote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_loading"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/details_vote_size"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/text_padding">


                            <ImageView
                                android:layout_width="@dimen/details_image_icon_size"
                                android:layout_height="@dimen/details_image_icon_size"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/details_image_icon_margin"
                                android:contentDescription="@string/icon_desc"
                                android:src="@mipmap/down_arrow"
                                />

                            <TextView
                                android:id="@+id/details_down_vote"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_loading"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/details_vote_size"
                                android:textStyle="bold"
                                />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/details_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/msg_loading"
                android:textColor="@color/colorText"
                android:textSize="@dimen/details_desc_size"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>